--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 .notes__button{
   background-color: var(--primaryColor);
@@ -83,6 +86,7 @@ body{
 .notes__title {
   height: 30%;
   font-size: 1.8rem;
+  resize: none;
 }
 .notes__body {
   margin-top: 3rem;
