--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,14 @@ body{
   box-shadow: 2px 2px 2px rgb(1, 58, 1, 0.5);
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:700px) {
+  .notes__sidebar{
+    width: 50%;
+  }
 
   .notes__add{
-    padding: 1.2rem 1.5rem;
-    font-size: 1.4rem;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.2rem;
   }
   .notes__preview{
     padding: 1rem;
